SRA 报错修正